# Deploy-streamlit-app-on-ec2

./: README.md  app.py
aws_genai/: Dockerfile  pyproject.toml  requirements.txt
aws_genai/aws_genai/: Dockerrun.aws.json
aws_genai/aws_genai/src/: app.py  htmltemplates.py  kb_retrieve.py  main.py
